--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </ol>
       </aside>
 
-      <section class="content">
+      <div class="content">
         <iframe name="saturs" src="uzd1.html" title="Uzdevumu saturs"></iframe>
-      </section>
+      </div>
 
       <aside class="right">
       </aside>
@@ -35,3 +35,4 @@
   </div>
 </body>
 </html>
+
