--- a/uzd1.html
+++ b/uzd1.html
@@ -6,9 +6,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h2>Sistēmu izstrāde</h2>
-  <p style="text-align: justify;">
-    Sistēmu izstrāde ir jaunas programmatūras izstrāde, pārbaude un nodošana lietotājam.
+  <h2>﻿Sistēmu izstrāde</h2>
+  <p class="text-purple">
+    <strong class="text-blue">Sistēmu izstrāde</strong> ir jaunas programmatūras izstrāde,
+    pārbaude un nodošana lietotājam.
+  </p>
+  <p class="text-blue">
     Jaunu datorbāzētu sistēmu izstrāde parasti sastāv no vairākiem posmiem.
   </p>
 </body>
